# tox

./: .codeclimate.yml  .codecov.yml  .coveragerc  .cursorrules  .dockerignore  .git.premigrate  .gitignore  .hgignore  .hgtags  .mailmap  .markdownlint.yaml  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis-osx  .travis.yml  .vsts-ci.yml  .windsurfrules  1547.bugfix.rst  ARCHITECTURE.md  CHANGELOG  CHANGELOG.rst  CHANGELOG.txt  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  CONTRIBUTORS  Dockerfile  HOWTORELEASE.rst  ISSUES.txt  LICENSE  MANIFEST.in  README.md  README.rst  README.txt  SECURITY.md  Vagrantfile  _.coveragerc  appveyor.yml  azure-pipelines.yml  (+15 more)
.devcontainer/: Dockerfile  devcontainer.json  settings.vscode.json
.github/: .FUNDING.yml  CODEOWNERS  CONTRIBUTING.md  FUNDING.yaml  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  config.yml  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md  config.yml  feature-request.md  feature_request.md
.github/workflows/: check.yaml  check.yml  prepare-release.yaml  python-linters.yml  python-tests.yml  release.yaml  release.yml  update-schemastore.yaml  weekly.yaml
.vsts/: docs.yml  lint-docs.yml  linux-pr.yml  mac.yml  windows.yml
changelog/: 1003.bugfix.rst  1004.feature.rst  1026.bugfix.rst  1026.feature.rst  167.feature.rst  19.feature.rst  256.feature.rst  290.feature.rst  292.feature.rst  305.doc.rst  331.misc.rst  374.doc.rst  410.feature.rst  426.bugfix.rst  477.bugfix.rst  503.bugfix.rst  545.doc.rst  573.feature.rst  593.bugfix.rst  593.feature.rst  601.feature.rst  639.doc.rst  656.bugfix.rst  663.misc.rst  668.feature.rst  672.bugfix.rst  679.feature.rst  692.bugfix.rst  701.bugfix.rst  706.bugfix.rst  708.misc.rst  723.bugfix.rst  725.feature.rst  727.bugfix.rst  740.feature.rst  744.trivial.rst  748.doc.rst  754.misc.rst  755.bugfix.rst  766.feature.rst  (+40 more)
contrib/: README.md  release-helper.sh  release-pre-process.py  towncrier-pre-process.py
doc/: Makefile  _getdoctarget.py  _shared-links.rst  changelog.rst  check_sphinx.py  conf.py  config-advanced.rst  config-v1.txt  config-v2.rst  config-v2.txt  config.rst  config.txt  developer-faq.rst  developers.rst  developers.txt  examples.rst  examples.txt  index.rst  index.txt  install.rst  install.txt  links.rst  links.txt  newconfig.txt  org.rst  overview.rst  plugins.rst  plugins.txt  start.rst  support.rst  support.txt  test_sphinx.py  toxini.txt  usecases.txt  usecases_old.txt
doc/_static/: custom.css  sphinxdoc.css
doc/_templates/: indexsidebar.html  layout.html  localtoc.html
doc/announce/: changelog-only.rst  release-0.5.rst  release-0.5.txt  release-1.0.txt  release-1.1.txt  release-1.2.txt  release-1.3.txt  release-1.4.3.txt  release-1.4.txt  release-1.8.txt  release-1.9.rst  release-2.0.txt  release-2.4.0.txt
doc/drafts/: extend-envs-and-packagebuilds.md  tox_conda_notes_niccodemus.md
doc/example/: basic.rst  basic.txt  devenv.rst  devenv.txt  documentation.rst  general.rst  general.txt  hudson.txt  jenkins.rst  jenkins.txt  nose.rst  nose.txt  package.rst  platform.rst  platform.txt  pytest.rst  pytest.txt  result-json.rst  result.rst  result.txt  sphinx.txt  unittest.rst  unittest.txt
docs/: architecture.rst  changelog.rst  cli_interface.rst  conf.py  config.rst  developers.rst  development.rst  examples.rst  explanation.rst  extend.rst  faq.rst  getting_started.rst  howto.rst  index.rst  install.rst  installation.rst  links.rst  manpage.rst  onboarding.rst  plugins.rst  plugins_api.rst  render_cli.py  support.rst  tox_conf.py  upgrading.rst  user_guide.rst
docs/_ext/: towncrier_draft_ext.py
docs/_static/: custom.css  mermaid-reset.js
docs/_templates/: localtoc.html
docs/announce/: changelog-only.rst
docs/changelog/: +bare-req-flag-crash.bugfix.rst  +command-detection-option-value.bugfix.rst  +config-contains-truthiness.bugfix.rst  +dependency-groups-no-table.bugfix.rst  +empty-list-env-var.bugfix.rst  +expand-ranges-wrong-occurrence.bugfix.rst  +extra-index-url-dedup.bugfix.rst  +extras-canonical-key.bugfix.rst  +file-view-cross-drive.bugfix.rst  +no-binary-render.bugfix.rst  +parallel-empty-selection.bugfix.rst  +pkg-root-frontend-guard.bugfix.rst  +pty-master-fd-leak.bugfix.rst  +pty-termios-fd-leak.bugfix.rst  +recursive-extra-canonical-name.bugfix.rst  +set-env-escaped-semicolon.bugfix.rst  +toml-env-replace-chain.bugfix.rst  1026.feature.rst  1035.doc.rst  1042.bugfix.rst  1045.bugfix.rst  1047.bugfix.rst  1047.feature.rst  1051.bugfix.rst  1052.bugfix.rst  1061.doc.rst  1071.doc.rst  1073.bugfix.rst  1081.feature.rst  1082.doc.rst  1083.misc.rst  1084.doc.rst  1087.bugfix.rst  1088.doc.rst  1092.bugfix.rst  1092.misc.rst  1095.bugfix.rst  1097.bugfix.rst  1110.doc.rst  1113.feature.rst  (+800 more)
docs/drafts/: extend-envs-and-packagebuilds.md  tox_conda_notes_niccodemus.md
docs/example/: basic.rst  devenv.rst  documentation.rst  general.rst  jenkins.rst  nose.rst  package.rst  platform.rst  pytest.rst  result.rst  unittest.rst
docs/how-to/: install.rst  usage.rst
docs/img/: overview.mermaidjs
docs/man/: tox.1.rst
docs/plugin/: api.rst  getting_started.rst  howto.rst  index.rst
docs/plugins/: api.rst  getting_started.rst  howto.rst  index.rst
docs/reference/: cli.rst  (+1 more)
newsfragments/: 544.feature  571.bugfix  614.doc
src/: new.md
tasks/: README.md  client_secret.json  notify.py  pra.sh  pre-process-changelog.py  release.py
tests/: conftest.py  test_call_modes.py  test_cmdline.py  test_config.py  test_interpreters.py  test_package.py  test_package_build.py  test_provision.py  test_pytest_plugins.py  test_quickstart.py  test_report.py  test_result.py  test_run.py  test_session.py  test_util.py  test_venv.py  test_version.py  test_z_cmdline.py
tools/: generate_manpage.py
tox/: __init__.py  __main__.py  _cmdline.py  _config.py  _exception.py  _pytestplugin.py  _quickstart.py  _venv.py  _verlib.py  config.py  constants.py  exc.py  exception.py  hookspecs.py  interpreters.py  result.py  session.py  venv.py
typestubs/: _overlapped.pyi
(+433 files in other folders)
