[metadata]
name = tox
description = tox is a generic virtualenv management and test command line tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://tox.readthedocs.io
author = Holger Krekel, Oliver Bestwalter, Bernát Gábor and others
maintainer = Bernat Gabor, Oliver Bestwalter, Anthony Asottile
maintainer_email = tox-dev@python.org
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: tox
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Testing
    Topic :: Utilities
keywords = virtual, environments, isolated, testing
project_urls =
    Source=https://github.com/tox-dev/tox
    Tracker=https://github.com/tox-dev/tox/issues
    Changelog=https://tox.readthedocs.io/en/latest/changelog.html

[options]
packages = find:
install_requires =
    filelock>=3.0.0
    packaging>=14
    pluggy>=0.12.0
    py>=1.4.17
    six>=1.14.0 # required when virtualenv>=20
    toml>=0.9.4
    virtualenv!=20.0.0,!=20.0.1,!=20.0.2,!=20.0.3,!=20.0.4,!=20.0.5,!=20.0.6,!=20.0.7,>=16.0.0
    colorama>=0.4.1 ;platform_system=="Windows"
    importlib-metadata>=0.12;python_version<"3.8"
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    tox=tox:cmdline
    tox-quickstart=tox._quickstart:main

[options.extras_require]
docs =
    pygments-github-lexers>=0.0.5
    sphinx>=2.0.0
    sphinxcontrib-autoprogram>=0.1.5
    towncrier>=18.5.0
testing =
    flaky>=3.4.0
    freezegun>=0.3.11
    pytest>=4.0.0
    pytest-cov>=2.5.1
    pytest-mock>=1.10.0
    pytest-randomly>=1.0.0
    pathlib2>=2.3.3;python_version<"3.4"
    psutil>=5.6.1;platform_python_implementation=="cpython"

[bdist_wheel]
universal = 1
