[metadata]
name = tox
description = tox is a generic virtualenv management and test command line tool
long_description = file: README.md
long_description_content_type = text/markdown
url = http://tox.readthedocs.org
author = Bernát Gábor
author_email = gaborjbernat@gmail.com
maintainer = Bernát Gábor, Oliver Bestwalter, Anthony Sottile, Jürgen Gmach
maintainer_email = tox-dev@python.org
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: tox
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Testing
    Topic :: Utilities
keywords = virtual, environments, isolated, testing
project_urls =
    Source=https://github.com/tox-dev/tox
    Tracker=https://github.com/tox-dev/tox/issues

[options]
packages = find:
install_requires =
    cachetools>=4.2
    chardet>=4
    colorama>=0.4.4
    packaging>=21
    platformdirs>=2.1
    pluggy>=0.13.1
    pyproject-api>=0.1
    tomli>=1.1
    virtualenv>=20.6
    importlib-metadata>=4.6.1;python_version<"3.8"
    typing-extensions>=3.10;python_version<"3.8"
python_requires = >=3.7
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    tox = tox.run:run

[options.extras_require]
docs =
    furo>=2022.1.2
    sphinx>=4.4
    sphinx-argparse-cli>=1.8.3
    sphinx-autodoc-typehints>=1.16
    sphinx-copybutton>=0.5
    sphinx-inline-tabs>=2022.1.2b11
    sphinxcontrib-towncrier>=0.2.1a0
    towncrier>=21.3
testing =
    covdefaults>=2.2
    devpi-client>=5.2
    devpi-server>=6.4
    distlib>=0.3.4
    filelock>=3.4
    flaky>=3.7
    freezegun>=1.1
    psutil>=5.9
    pytest>=7
    pytest-cov>=3
    pytest-mock>=3.7
    pytest-xdist>=2.5
    re-assert>=1.1
    setuptools>=60
    setuptools-scm>=6
    wheel>=0.37

[options.package_data]
tox = py.typed

[tool:pytest]
testpaths = tests
junit_family = xunit2
addopts = --tb=auto -ra --showlocals --no-success-flaky-report

[coverage:run]
parallel = True
plugins = covdefaults

[coverage:report]
fail_under = 95
omit =
    src/tox/config/cli/for_docs.py
    tests/execute/local_subprocess/bad_process.py
    tests/type_check/*

[coverage:paths]
source =
    src
    .tox*/*/lib/python*/site-packages
    .tox*/pypy*/site-packages
    .tox*\*\Lib\site-packages\
    */src
    *\src

[coverage:html]
show_contexts = true
skip_covered = false

[coverage:covdefaults]
subtract_omit = */.tox/*

[mypy]
python_version = 3.7
strict = true
show_error_codes = true

[mypy-colorama.*]
ignore_missing_imports = True

[mypy-coverage.*]
ignore_missing_imports = True

[mypy-distlib.*]
ignore_missing_imports = True

[mypy-flaky.*]
ignore_missing_imports = True

[mypy-importlib_metadata.*]
ignore_missing_imports = True

[mypy-pluggy.*]
ignore_missing_imports = True

[mypy-psutil.*]
ignore_missing_imports = True

[mypy-re_assert.*]
ignore_missing_imports = True

[mypy-setuptools.*]
ignore_missing_imports = True

[mypy-virtualenv.*]
ignore_missing_imports = True

[mypy-wheel.*]
ignore_missing_imports = True

[flake8]
max-complexity = 22
max-line-length = 120
unused-arguments-ignore-abstract-functions = true
noqa-require-code = true
ignore =
    E203 # whitespace before ':'
    W503 # line break before binary operator

[pep8]
max-line-length = 120
